# jbcs

./: .gitignore  LICENSE  README.md
openmp/: CMakeLists.txt  mandel.c  pi.c
python/: mandel.py  pi.py
